--- a/test_markdown.Rmd
+++ b/test_markdown.Rmd
@@ -27,7 +27,9 @@ plot(pressure)
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
 ```{r}
-test <- 1 + 1 >= 2
+n <- 2
+test <- 1 + 1 >= n
 test
+
 ```
 
